# cardio-vasc-risks

./: README.md  akram.py  analsys.ipynb  analysis.ipynb  cardio_train_clean.csv  cleaning.ipynb  logistic_regression.py  main.py  modelisation.ipynb  preprocessing.ipynb  pyproject.toml  regression_from_scratch.ipynb  results.csv  test.py  treating_of_outliers.ipynb  utils.py  veille_regression.markdown  visualization.ipynb
data/: balanced.csv  balanced_2.csv  balanced_3.csv  cardio_balanced_test.csv  cardio_balanced_train.csv  cardio_light.csv  cardio_light_2.csv  cardio_light_std.csv  cardio_optimized.csv  cardio_train_clean.csv
notebooks/: 02_visualization.ipynb  03_preprocessing.ipynb  04_modelisation.ipynb  akram.ipynb  arthur.ipynb  best_model_logreg.joblib  best_model_random_logreg.joblib  cleaning.ipynb  modelisation.ipynb  modelisation_brouillon.ipynb  preprocessing.ipynb  random_forest.ipynb  visualization.ipynb
results/: gridsearch_full_results.csv  results.csv  results_2.csv
